work on business index

--- a/app/views/partials/_social.html.erb
+++ b/app/views/partials/_social.html.erb
@@ -6,9 +6,9 @@
 
         <ul class="social-icons">
 
-            <li><a href="https://www.facebook.com/PharaohAten" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/The-Blackwoman-Is-God-Stores-417484945123281/" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
 
-            <li><a href="https://twitter.com/tbwig_stores/status/1259339941995298817?s=21" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/tbwig_stores/" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
 
             <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
 
