--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -69,7 +69,7 @@
 
 <div class="row">
 <% @businesses.each do |business| %>
-	<% unless business.user.subscribed == false %>
+	<% if business.user.subscribed == true %>
 		
 			<div class="col-md-4" align="center">
 				<div data-aos="zoom-in" data-aos-duration="2000" style=" width: 100%; height: 550px; border: solid; border-width: 1px; border-radius: 10px; border-color: #D4AF37; margin-top: 3%; padding: 2%">
