--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -24,7 +24,10 @@
 
   <div class="col-md-4" align="center">
     <div class="row" style="margin-bottom: 5%">
-      <%= image_tag @product.picture, style: "width: 350px; height: 350px; border-radius: 5px;" %>
+      <div>
+        <%= image_tag @product.picture, style: "width: 85%; height: 85%; border-radius: 5px;" %>
+      </div>
+      
     </div>
     <div class="row" style="margin-top: 2%; margin-bottom: 5%; color: #D4AF37;">
         <h3>
@@ -47,7 +50,7 @@
     
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4" align="center">
     <h3 style="color: #D4AF37;">How many do you need?</h3>
     <h3 style="color: #D4AF37;">Don't forget to Update your Quantity!!!</h3>
 
@@ -74,8 +77,7 @@
                  
       </div>
   
-    
-
+  
               <h3 style="color: #D4AF37;">Please Enter Your Shipping Information:</h3>
               
               <div class="row">
