work on business index

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -91,7 +91,10 @@
 						</div>
 					</div>
 					<div class="row" style="margin-top: 1%; margin-bottom: 1%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; word-wrap: break-word;">
-						<h3 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis; word-wrap: break-word;"><%= link_to business.title, business_path(business), style: "color: #D4AF37; width: 80%;" %></h3>
+						<div style="width: 80%;">
+							<h3 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis; word-wrap: break-word;"><%= link_to business.title, business_path(business), style: "color: #D4AF37; width: 80%;" %></h3>
+						</div>
+						
 					</div>
 					<div class="row" style="margin: 3%;">
 						<h4 style="color: #D4AF37">Description:</h4>
