--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @product, url: "#{products_path}", html: { multipart: true } do |f| %>
+<%= simple_form_for @product, html: { multipart: true }, :method => :patch do |f| %>
 
   <div id="stripe_error" class="alert alert-danger" style="display:none">
             <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
