--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,6 +103,13 @@
 
 </div>
 
+<div class="row" style="margin-top: 5%; margin-bottom: 5%" align="center">
+  <h1>We are Upgrading!</h1> 
+  <h2>Aten Market Coming Soon!</h2>
+  <p>Hello! We would like to thank you for supporting The Black Woman is God Stores.</p>
+    <p>Due to our recent growth we will be retiring TBWIGS. We are temporarily keeping the current version of the platform available for all Vendors to complete any outstanding orders. After the upgrade all current items and orders will be terminated from the site, also new profile registration may be required (follow @atennation for all news and updates concerning Aten Market). TBWIGS will now be known as Aten Market Under the umbrella of The Universal Nation of Aten. We thank you for all of your continued support! </p>
+</div>
+
 
 <!-- Product Row -->
 
